# joint-speech-text

./: .gitattributes  README.md  pyproject.toml
config/: vctk_full.yaml
espnet_modified/espnet/nets/pytorch_backend/conformer/: convolution.py
espnet_modified/espnet/nets/pytorch_backend/tacotron2/: decoder.py
exp/vctk_full/checkpoint_450/: checkpoint.pth
modules/: aligner.py  asr.py  dataset.py  duration_predictor.py  jst_model.py  shared_encoder.py  speaker_recognition.py  speech_feature.py  text_feature.py  tts_decoder.py
modules/mfa_conformer/: amsoftmax_loss.py  conformer_cat.py
modules/mfa_conformer/wenet/transformer/: attention.py  embedding.py  encoder.py  encoder_cat.py  encoder_layer.py  encoder_weight.py  subsampling.py
modules/mfa_conformer/wenet/utils/: checkpoint.py  cmvn.py  common.py  ctc_util.py  executor.py  scheduler.py
scripts/: eval_jst.py  train_all_ddp_gradaccum.py
utils/: log_utils.py  mel_spectrogram.py
vctk/: feats  phoneme_tokens.txt  spk_list.txt  spk_list_seenonly.txt  test.txt  test_vc.txt  train.txt  unseen_test.txt  unseen_vc.txt
vocoder/: checkpoint-1100000steps.pkl  config.yml  stats.npy
